--- a/src/index.css
+++ b/src/index.css
@@ -62,7 +62,7 @@
   width: 36px;
   height: 36px;
   border-radius: 50%;
-  border-top-color: #3498db;
+  border-top-color: rgb(52 211 153);
   animation: spin 1s ease-in-out infinite;
 }
 @keyframes spin {
